# goitneo-python-hw-1-group-1

./: README.md  bot.py  pyproject.toml
source/: functions.py
